--- a/watchlist.html
+++ b/watchlist.html
@@ -328,7 +328,7 @@
                 header.className = 'flex items-center justify-between gap-4';
 
                 const leftBox = document.createElement('div');
-                leftBox.className = 'flex items-center gap-3 cursor-pointer select-none';
+                leftBox.className = 'flex items-center gap-3 cursor-pointer';
 
                 const arrowSpan = document.createElement('span');
                 arrowSpan.className = 'arrow inline-block transition-transform duration-200';
