Revise contact information and update game status
Updated links and text for clarity and accuracy.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <h1 class="title">百炼为战纪念小站</h1>
     <!-- </div> -->
-    <p>本站所有地址，请收藏，以保证随时能顺利访问：<a href=https://www.kmcbest.icu>www.kmcbest.icu</a><FONT COLOR="FF0000">（新域名）</FONT>，<a href=https://kmcbest.github.io>kmcbest.github.io</a>（墙外），<a href=https://kmcbest-github-io.vercel.app/>kmcbest-github-io.vercel.app</a>（墙外）</p>
+    <p>本站所有地址，请收藏，以保证随时能顺利访问：<a href=https://www.kmcbest.icu>www.kmcbest.icu</a><FONT COLOR="FF0000"></FONT>，<a href=https://kmcbest.github.io>kmcbest.github.io</a>（墙外），<a href=https://kmcbest.vercel.app/>kmcbest.vercel.app</a>（墙外）</p>
         <p><b>2023年5月11日，百炼为战由Kabam卖给了Netflix（奈飞/网飞），以另一种方式重新上线</b>（<a href="https://play.google.com/store/apps/details?id=com.netflix.NGP.TransformersForgedToFight">谷歌商店</a>，<a href="https://apps.apple.com/us/app/transformers-forged-to-fight/id6444320431">苹果商店</a>）</p>
         <ul>
             <li>需要Netflix付费会员，国内需要科学上网方可注册</li>
@@ -31,10 +31,10 @@
             <li>电影系人物全部删除，但加入了之前遗憾未问世的克劳莉娅和封锁</li>
             <li>游戏没有内购和广告功能，完全依赖于Netflix的订阅</li>
         </ul>
-        <p>因兴趣转变和事务繁忙，翻译官大概率不会再投入到这个游戏中，但是会做好测试和教程，帮助有需要的人继续享受新的征程。</p>
+        <p>翻译官已无精力继续，本站仅保留对此游戏的纪念。</p>
 
         <ul>
-            <li> <a href="tftf_netflix/upandrunning.html">新百炼为战安装教程（不断更新完善中）</a></li>
+            <li> <a href="tftf_netflix/upandrunning.html">新百炼为战安装教程（供参考）</a></li>
         </ul>
         
         <hr>
